# bbb-osc

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: nightly-release.yml
examples/: custom.cpp  simple.cpp
include/bbb/: core.hpp  osc.hpp  udp.hpp
include/bbb/core/: macro.hpp  type_utility.hpp
include/bbb/osc/: argument.hpp  asio_receiver.hpp  asio_sender.hpp  common.hpp  custom_receiver.hpp  custom_sender.hpp  message.hpp  message_utility.hpp  packet.hpp  receiver.hpp  sender.hpp
include/bbb/osc/message/: convert.hpp  message.hpp  utility.hpp
include/bbb/osc/message/convert/: adl_serializer.hpp  detail.hpp  from_osc.hpp  to_osc.hpp
include/bbb/osc/packet/: decode.hpp  encode.hpp
include/bbb/udp/: constants.hpp  endpoint.hpp  receiver.hpp  sender.hpp  socket.hpp
scripts/: build-examples.sh  update-boost.sh
